# ggvtogpx-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.rst
.github/workflows/: build.yml
src/: error.rs  format.rs  geodata.rs  ggv_bin.rs  ggv_ovl.rs  ggv_ovl_tests.rs  ggv_xml.rs  gpx.rs  main.rs
testdata/: ggv_bin-sample-v2.gpx  ggv_bin-sample-v3.gpx  ggv_bin-sample-v4.gpx  ggv_bin-sample-v4.ovl  ggv_ovl-sample-1.gpx  ggv_ovl-sample-2.gpx  ggv_ovl-sample-2.ovl  ggv_xml-sample-1.gpx  ggv_xml-sample-1.ovl  ggv_xml-sample-2.gpx  ggv_xml-sample-2.ovl  ggv_xml-sample-3.gpx  ggv_xml-sample-3.ovl  ggv_xml-sample-4.gpx  ggv_xml-sample-4.ovl  ggv_xml-sample-5.gpx  ggv_xml-sample-5.ovl
